Fix text alignment

--- a/app/containers/EMMCases/style.scss
+++ b/app/containers/EMMCases/style.scss
@@ -23,6 +23,7 @@
     .input-field {
         margin-bottom: 32px !important;
     }
+    .not-found,
     .search,
     .header,
     .page-search,
